docs: update gitignore and add training results
Add training plot, confusion matrix and metrics report
Uncomment results folder in gitignore to track output files

--- a/.gitignore
+++ b/.gitignore
@@ -160,5 +160,5 @@ ehthumbs.db
 Thumbs.db
 
 # Project Specific
-results/
+# results/ # Uncomment if you want to ignore the results folder
 # archive/ # Uncomment if you want to ignore the dataset folder
